--- a/video.html
+++ b/video.html
@@ -31,7 +31,7 @@
 			<div class="linha">
 				<header>
 					<div class="coluna col3">
-						<a href="Index.html">
+						<a href="index.html">
 							<div class="logo">
 								<img src="fotos/logo.png" alt="" title="GomaSlayer">
 							</div>
