--- a/video.html
+++ b/video.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="videos">
 			<div class="linha">
-				<div class="coluna col10">
+				<div class="coluna col15">
 					<div class="titulo">
 						<h1>Abertura da Campanha</h1>
 					</div>
@@ -64,23 +64,15 @@
 			 			Your browser does not support the video tag.		
 					</video>
 				</div>
-				<div class="coluna col6">
-					<div>
-						<p>Tchau amigos, volto sabado provavelmete reformed. vou sentir sdds das vozes de vocês, espero que vcs se divirtam nos meus dias de férias
-						👡</p>
-						<p>Tchau amigos, volto sabado provavelmete reformed. vou sentir sdds das vozes de vocês, espero que vcs se divirtam nos meus dias de férias
-						👡</p>
-					</div>
-				</div>
 			</div>
 			<div class="linha">
-				<div class="coluna col10">
+				<div class="coluna col15">
 					<div class="titulo">
 						<h1>Encerramento da Campanha</h1>
 					</div>
 					<video controls>
-			  			<source src="videos/GomaSlayerOp.mp4" type="video/mp4">
-			 			<source src="videos/GomaSlayerOp.ogg" type="video/ogg">
+			  			<source src="videos/GomaSlayerEnding.mp4" type="video/mp4">
+			 			<source src="videos/GomaSlayerEnding.ogg" type="video/ogg">
 			 			Your browser does not support the video tag.		
 					</video>
 				</div>
